<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/m1">
<!--    android:background="#72D897">-->
    <!--    android:background="#729BD8">-->
    <!--    android:background="#1D9C52">-->
    <!--    android:background="#CED88469">-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/about_dollar_cur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="                            Курс на сегодня:"
            android:textColor="#E58CF4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#F8F86B89"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/conv1"
        android:textColor=    "#73DCEA"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="50dp"
        android:text="@string/walletselect"
        android:textColor=    "#73DCEA"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="42dp"
        android:text="@string/wallets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

<!--    <TextView-->
<!--        android:id="@+id/textSms"-->
<!--        android:layout_width="172dp"-->
<!--        android:layout_height="97dp"-->
<!--        android:layout_marginBottom="420dp"-->
<!--        android:textSize="18sp"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
<!--        app:layout_constraintHorizontal_bias="0.066"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--        app:layout_constraintVertical_bias="0.816" />-->

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/img"
        android:layout_width="172dp"
        android:layout_height="126dp"
        android:layout_marginTop="188dp"
        android:layout_marginRight="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/money_time"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="156dp"
        android:text="Введите сумму:"
        android:textColor=    "#73DCEA"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/button4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Отправить смс"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.928" />-->

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:hint="количество денег"
        android:inputType="numberDecimal"
        android:textColor=    "#73DCEA"
        android:textColorHint=    "#73DCEA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button" />

<!--    <EditText-->
<!--        android:id="@+id/editSms"-->
<!--        android:layout_width="309dp"-->
<!--        android:layout_height="109dp"-->
<!--        android:hint="напишите текст для отправки"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
<!--        app:layout_constraintHorizontal_bias="0.242"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.639" />-->


<!--    <EditText-->
<!--        android:id="@+id/editNumber"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:digits="0123456789+"-->
<!--        android:hint="номер телефона"-->
<!--        android:inputType="phone"-->
<!--        android:singleLine="true"-->
<!--        android:textColorHint=    "#73DCEA"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
<!--        app:layout_constraintHorizontal_bias="0.939"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.3" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="Конвертировать"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintVertical_bias="0.053" />
    <!--        style="@style/RoundedCornerButton"/>-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/beginsumm"
        android:textColor="#73DCEA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
<!--    &lt;!&ndash;        style="@style/RoundedCornerButton"/>&ndash;&gt;-->

</androidx.constraintlayout.widget.ConstraintLayout>